Fix header on small mobile screens

--- a/assets/sass/_layout.scss
+++ b/assets/sass/_layout.scss
@@ -45,6 +45,12 @@ header {
 
     a {
       color: #FFF;
+      width: 205px;
+      display: block;
+
+      @include media(desktop) {
+        width: initial;
+      }
     }
   }
 
